[gd_scene load_steps=14 format=3 uid="uid://d36ytiqg31edd"]

[ext_resource type="Script" uid="uid://datbxxer3mwvc" path="res://Scripts/mainmenu.gd" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://ckkds573c15wj" path="res://gui/Backgrounds/Main_menu_Background.png" id="2_kpa4r"]
[ext_resource type="Texture2D" uid="uid://dljqigmy8f7k6" path="res://Sprites/Player/player.png" id="3_4k22p"]
[ext_resource type="Texture2D" uid="uid://b8wrg4f34l05q" path="res://gui/MainMenu/small button.png" id="4_pv8c5"]
[ext_resource type="Texture2D" uid="uid://d1ojbvrecs4o1" path="res://gui/MainMenu/long button.png" id="5_enwt5"]
[ext_resource type="Texture2D" uid="uid://cn716b8kx5vgr" path="res://gui/energy.png" id="6_7q2f4"]
[ext_resource type="Texture2D" uid="uid://dxy5okvgwlv6o" path="res://gui/learning modules.png" id="7_3ylv5"]
[ext_resource type="Texture2D" uid="uid://dtc3wy3w5us7i" path="res://gui/newicon/upscalemedia-transformed.png" id="9_fh7cp"]
[ext_resource type="Texture2D" uid="uid://cgs6saoh3771b" path="res://gui/journey mode.png" id="9_ndgqr"]
[ext_resource type="Texture2D" uid="uid://0pd5aetjcpr6" path="res://gui/leaderboards.png" id="10_vgdm8"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="11_qm2o7"]
[ext_resource type="Texture2D" uid="uid://m6ls0r18o3xg" path="res://gui/settings.png" id="12_q0r2p"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="13_uaqt0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt5f1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kpa4r")
expand_mode = 1
stretch_mode = 6

[node name="TitleContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 319.0
offset_top = 77.0
offset_right = -463.0
offset_bottom = 289.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -125.0
offset_right = 319.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("13_uaqt0")
theme_override_font_sizes/font_size = 80
text = "LEXIA"
horizontal_alignment = 1

[node name="CharacterArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -202.0
offset_right = 14.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerCharacter" type="TextureRect" parent="CharacterArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -57.0
offset_right = 119.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4k22p")
expand_mode = 1
stretch_mode = 5

[node name="ProfileButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -629.0
offset_top = 20.0
offset_right = -514.0
offset_bottom = 163.0
grow_horizontal = 2
texture_normal = ExtResource("4_pv8c5")
ignore_texture_size = true
stretch_mode = 5

[node name="AvatarBackground" type="ColorRect" parent="ProfileButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -44.5
offset_right = 110.0
offset_bottom = 49.5
grow_vertical = 2
scale = Vector2(0.923117, 0.93701)
mouse_filter = 2
color = Color(0.054902, 0.27451, 0.47451, 0.501961)

[node name="ProfileLabel" type="Label" parent="ProfileButton"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = 5.0
offset_right = 75.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.054902, 0.27451, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 18
text = "Your Profile"
horizontal_alignment = 1

[node name="EnergyDisplay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -228.0
offset_top = 45.0
offset_right = -68.0
offset_bottom = 104.0
grow_horizontal = 0

[node name="EnergyIcon" type="TextureRect" parent="EnergyDisplay"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -35.0
offset_top = 10.0
offset_right = 15.0
offset_bottom = 60.0
texture = ExtResource("6_7q2f4")
expand_mode = 1
stretch_mode = 5

[node name="EnergyLabel" type="Label" parent="EnergyDisplay"]
layout_mode = 0
offset_left = 25.0
offset_top = 10.0
offset_right = 146.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0.933333, 0.788235, 0.0352941, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_uaqt0")
theme_override_font_sizes/font_size = 32
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyTooltip" type="Label" parent="EnergyDisplay"]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 52.0
offset_right = 161.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.054902, 0.27451, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 18
text = "Energy Points"
horizontal_alignment = 1

[node name="BottomButtonsContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="ModulesButton" type="TextureButton" parent="BottomButtonsContainer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -132.0
offset_right = 160.0
offset_bottom = -32.0
grow_vertical = 0
texture_normal = ExtResource("4_pv8c5")
ignore_texture_size = true
stretch_mode = 5

[node name="ModulesLabel" type="Label" parent="BottomButtonsContainer/ModulesButton"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.5
offset_top = -30.0
offset_right = 57.5
offset_bottom = -3.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.054902, 0.27451, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 18
text = "Learning Modules"
horizontal_alignment = 1

[node name="ModulesIcon" type="TextureRect" parent="BottomButtonsContainer/ModulesButton"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 25.0
offset_top = 10.0
offset_right = 105.0
offset_bottom = 90.0
texture = ExtResource("7_3ylv5")
expand_mode = 1
stretch_mode = 5

[node name="CharacterButton" type="TextureButton" parent="BottomButtonsContainer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 415.0
offset_top = -123.0
offset_right = 545.0
offset_bottom = -23.0
grow_vertical = 0
texture_normal = ExtResource("4_pv8c5")
ignore_texture_size = true
stretch_mode = 5

[node name="CharacterLabel" type="Label" parent="BottomButtonsContainer/CharacterButton"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.5
offset_top = -30.0
offset_right = 57.5
offset_bottom = -3.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.054902, 0.27451, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 18
text = "Change Character"
horizontal_alignment = 1

[node name="CharacterIcon" type="TextureRect" parent="BottomButtonsContainer/CharacterButton"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 25.0
offset_top = 10.0
offset_right = 105.0
offset_bottom = 90.0
texture = ExtResource("9_fh7cp")
expand_mode = 1
stretch_mode = 5

[node name="JourneyButton" type="TextureButton" parent="BottomButtonsContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -120.0
offset_right = 130.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("5_enwt5")
ignore_texture_size = true
stretch_mode = 5

[node name="JourneyIcon" type="TextureRect" parent="BottomButtonsContainer/JourneyButton"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ndgqr")
expand_mode = 1
stretch_mode = 5

[node name="JourneyLabel" type="Label" parent="BottomButtonsContainer/JourneyButton"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = -5.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.054902, 0.27451, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 18
text = "Start Journey"
horizontal_alignment = 1

[node name="LeaderboardButton" type="TextureButton" parent="BottomButtonsContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -550.0
offset_top = -118.0
offset_right = -420.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("4_pv8c5")
ignore_texture_size = true
stretch_mode = 5

[node name="LeaderboardLabel" type="Label" parent="BottomButtonsContainer/LeaderboardButton"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.5
offset_top = -30.0
offset_right = 57.5
offset_bottom = -3.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.054902, 0.27451, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 18
text = "Leaderboard"
horizontal_alignment = 1

[node name="LeaderboardIcon" type="TextureRect" parent="BottomButtonsContainer/LeaderboardButton"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 31.0
offset_top = 14.0
offset_right = 111.0
offset_bottom = 94.0
scale = Vector2(0.861045, 0.923941)
texture = ExtResource("10_vgdm8")
expand_mode = 1
stretch_mode = 5

[node name="SettingsButton" type="TextureButton" parent="BottomButtonsContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -146.0
offset_top = -126.0
offset_right = -16.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("4_pv8c5")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsLabel" type="Label" parent="BottomButtonsContainer/SettingsButton"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = -5.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.054902, 0.27451, 0.47451, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 18
text = "Settings"
horizontal_alignment = 1

[node name="SettingsIcon" type="TextureRect" parent="BottomButtonsContainer/SettingsButton"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 29.0
offset_top = 15.0
offset_right = 101.0
offset_bottom = 87.0
texture = ExtResource("12_q0r2p")
expand_mode = 1
stretch_mode = 5

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1228.0
offset_top = -369.0
offset_right = -979.0
offset_bottom = -269.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.788235, 0.0352941, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 25
text = "Loading..."
vertical_alignment = 1
clip_text = true

[node name="LevelContainer" type="HBoxContainer" parent="InfoContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="LevelPrefixLabel" type="Label" parent="InfoContainer/LevelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.788235, 0.0352941, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 25
text = "LVL:"
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="InfoContainer/LevelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.788235, 0.0352941, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_qm2o7")
theme_override_font_sizes/font_size = 25
text = "100"
vertical_alignment = 1
